# Ventro

./: .gitignore  FAANG_RESUME_GUIDE.md  LOCAL_SHARING_GUIDE.md  README.md  reindex.py  test_citation.py  test_fragments.py  test_parse.py
.github/workflows/: e2e.yml
backend/: .env.cloud.example  .env.example  Dockerfile  README.md  generate_test_docs.py  generate_test_pdfs.py  pyproject.toml  reindex.py  run_migrations.py  seed_users.py  test_extraction.py  test_fragments.py
backend/src/: __init__.py
backend/src/application/: __init__.py  config.py
backend/src/application/agents/: classification_agent.py  compliance_agent.py  drafting_agent.py  extraction_agent.py  langgraph_orchestrator.py  quantitative_agent.py  reconciliation_agent.py  samr_agent.py
backend/src/application/services/: batch_matching.py  confidence_intervals.py
backend/src/domain/: __init__.py  auth_entities.py  entities.py  interfaces.py
backend/src/infrastructure/auth/: jwt_handler.py  password_handler.py  token_denylist.py
backend/src/infrastructure/cache/: progress_publisher.py
backend/src/infrastructure/cv/: currency_normalizer.py  document_processor.py  document_sanitizer.py  ocr_processor.py  vlm_processor.py
backend/src/infrastructure/database/: mongodb_adapter.py  postgres_adapter.py  user_repository.py
backend/src/infrastructure/database/migrations/: 001_users.sql  005_webhooks.sql  006_samr_feedback.sql  007_session_org_id.sql
backend/src/infrastructure/jobs/: batch_tasks.py  celery_app.py  reconciliation_tasks.py
backend/src/infrastructure/llm/: embedding_model.py  groq_client.py  llm_router.py  ollama_client.py
backend/src/infrastructure/samr/: adaptive_threshold.py
backend/src/infrastructure/secrets/: secrets_provider.py
backend/src/infrastructure/security/: __init__.py  encryption.py  prompt_sanitizer.py
backend/src/infrastructure/telemetry/: otel_setup.py
backend/src/infrastructure/vector_store/: qdrant_adapter.py
backend/src/infrastructure/webhooks/: webhook_service.py
backend/src/infrastructure/workpaper/: workpaper_utils.py
backend/src/presentation/: dependencies.py  main.py  schemas.py
backend/src/presentation/api/v1/: analytics.py  documents.py  reconciliation.py
backend/src/presentation/middleware/: auth_middleware.py  rate_limit_middleware.py
backend/src/presentation/routes/: admin_router.py  auth_router.py  samr_router.py
backend/src/presentation/websocket/: progress.py
backend/tests/: test_production_hardening.py
backend/tests/unit/: test_document_processor.py  test_quantitative_agent.py
docs/: CloudSetupLog.md  CommercialStrategy.md  DeploymentGuide.md  ProductSuiteRoadmap.md  SystemJournal.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: admin.spec.ts  auth.spec.ts  bulk_upload.spec.ts  rbac.spec.ts  reconciliation.spec.ts
frontend/src/: App.tsx  index.css  (+1 more)
infra/: docker-compose.yml
(+41 files in other folders)
