[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-vgfr"
version = "1.0.0"
description = "Multi-Agent System for Visually-Grounded Financial Reconciliation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MAS-VGFR Team" }]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Async & Concurrency
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",

    # LangGraph & LangChain Ecosystem
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",

    # Vector Store
    "qdrant-client>=1.11.0",

    # Document Processing & Computer Vision
    "pymupdf>=1.24.0",
    "pdf2image>=1.17.0",
    "python-doctr[torch]>=0.9.0",
    "Pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",

    # Table Processing
    "camelot-py[cv]>=0.11.0",

    # Embeddings & ML
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",

    # NLP & Text Processing
    "rapidfuzz>=3.9.0",
    "nltk>=3.8.0",
    "tiktoken>=0.7.0",

    # Databases
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "motor>=3.5.0",
    "pymongo>=4.8.0",

    # Caching & Task Queue
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.4.0",

    # Data Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Synthetic Data Generation
    "reportlab>=4.2.0",
    "faker>=26.0.0",
    "ctgan>=0.9.0",
    "sdv>=1.15.0",

    # Observability & Logging
    "structlog>=24.4.0",
    "langfuse>=2.36.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",

    # Security & Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tenacity>=8.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]
